# Three-Heuristics-For-Solving-The-Traveling-Salesman-Problem

./: .gitignore  CMakeLists.txt  Christofides.cpp  Christofides.h  Graph.cpp  Graph.h  GraphChristofides.cpp  GraphChristofides.h  Greedy.cpp  Greedy.h  LocalImprovements.cpp  LocalImprovements.h  MatchingChristofides.cpp  MatchingChristofides.h  Naive.cpp  Naive.h  README.md  Stopwatch.cpp  Stopwatch.h  TSPSolution.h  a.out  benchmarking.txt  benchmarkingWith2OPT.txt  cristofides.cpp  exceptioninput.txt  generateInputs.cpp  graph.cpp  graph.h  hungarian.cpp  hungarian.h  largeinput.txt  main.cpp  main.h  mediumgraph.txt  newlargerinput.txt  oldmain.cpp  output.txt  receive  receiveInput.cpp  sampleInputSmall.txt  (+1 more)
OldMinWeightMatch/: BinaryHeapChristofides.cpp  BinaryHeapChristofides.h  GlobalsChristofides.h  GraphChristofides.h  MatchingChristofides.h
benchmarkingtests/: 1000nodes2.txt  500nodes1.txt  50nodes1.txt  50nodes2.txt  50nodes3.txt
buildMac/: CMakeCache.txt  Makefile  cmake_install.cmake  tsp
buildVendela/: CTestTestfile.cmake
buildVendela/googletest/: CTestTestfile.cmake
buildVendela/googletest/googlemock/: CTestTestfile.cmake
buildVendela/googletest/googletest/: CTestTestfile.cmake
buildVendela/test/: CTestTestfile.cmake
test/: CMakeLists.txt  EularianTSPTourTests.cpp  GraphClassTests.cpp  GreedyAlgorithmsTests.cpp  MinWeightTests.cpp  PrimsTest.cpp  TestingSuite  TestingSuite.cpp  TwoOptTests.cpp
test/graphClassInputs/: tinygraph.txt
test/greedyTourInputs/: 1000nodes1.txt  1000nodes3.txt  250nodes1.txt  250nodes2.txt  250nodes3.txt  5nodes1.txt  5nodes2.txt  5nodes3.txt
test/minWeightInputs/: largeGraph.txt  largeGraphSolution.txt  multipleCorrect.txt  multipleCorrectSolution1.txt  multipleCorrectSolution2.txt  noMatch.txt  smallgraph.txt  smallgraphIncorrect.txt
test/primsInputs/: graphOneLoop.txt  mstGraph.txt
test/tourInputs/: mediumgraph.txt
